# opda

./: .env.template  .gitignore  .mcp.json  .ruflo-project  AGENTS.md  CLAUDE-DESIGN-BRIEF.md  CLAUDE.md  HANDOVER-2026-05-18-governance.md  HANDOVER-2026-07-05-rml-mapping-and-ontology-gap-closing.md  Makefile  README.md  astro.config.mjs  deploy.sh  dev.sh  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  serve.sh  tsconfig.json
tools/opda-gen/: README.md  pyproject.toml
tools/opda-gen/src/opda_gen/: __init__.py  __main__.py  cli.py  composer.py  jena_shacl.py  namespaces.py  term_sourcing.py
tools/opda-gen/src/opda_gen/ci/: __init__.py  baspi5_roundtrip_test.py  byte_identity.py  category_g_coverage_test.py  competency_query_test.py  description_coverage_test.py  descriptive_roundtrip_test.py  shacl_parity_test.py  (+6 more)
tools/opda-gen/tests/: test_annotations.py  test_baspi5_roundtrip.py  test_blank_nodes.py  test_byte_identity.py  test_category_g_coverage.py  test_contexts.py  test_description_coverage.py  test_descriptive.py  test_descriptive_roundtrip.py  test_dup_declaration.py  test_enumerated_profiles.py  test_excluded_construct.py  test_g14_special_category_predicate.py  test_g18_role_predicate.py  test_inference_closure.py  test_leaf_categoriser.py  test_leaf_resolver.py  test_manual.py  test_modules.py  test_object_property_coverage.py  test_odr0008_q7a_base_cardinality.py  test_profiles.py  test_serialiser.py  test_shacl_parity.py  test_shapes.py  test_term_sourcing.py  test_three_graph.py  test_vocabularies.py
tools/opda-gen/tests/fixtures/: minimal_dictionary.json  minimal_glossary.json  minimal_odr.md
(+2005 files in other folders)
