[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opda-gen"
version = "0.1.0"
description = "OPDA ontology generator — realises ADR-0007 specification per ADR-0008 infrastructure."
requires-python = ">=3.11,<3.12"
dependencies = [
    "rdflib==7.0.0",
    "pyshacl==0.25.0",
    "click==8.1.7",
    "pydantic==2.5.0",
    "tomli==2.0.1",
]

[project.scripts]
opda-gen = "opda_gen.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
