[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opda-gen"
version = "0.1.0"
description = "OPDA ontology generator — realises ADR-0007 specification per ADR-0008 infrastructure."
requires-python = ">=3.11,<3.12"
dependencies = [
    # SHACL validation runs on the Apache Jena 6.1.0 `shacl` CLI (ADR-0036/0037,
    # opda_gen.jena_shacl) — pyshacl is retired. The Jena dist is resolved from
    # OPDA_JENA_HOME / PATH or auto-provisioned; the runner needs only a JDK 17+.
    "rdflib==7.0.0",
    "click==8.1.7",
    "pydantic==2.5.0",
    "tomli==2.0.1",
    "pyyaml>=6.0",
]

[project.scripts]
opda-gen = "opda_gen.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
